--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
    margin: 0px;
    font-family: sans-serif;
 }
+.clearfix:after{
+    content: "";
+    display: table;
+    clear: both;
+}
 h1{
     margin-bottom: 40px;
 }
@@ -10,19 +15,18 @@ h2{
     margin-bottom: 20px;
 }
 h3{
-    margin-bottom:15px ;
+    margin-bottom: 15px ;
 }
-p{
-    margin-bottom: 40px;
-}
+
 .P2 {
  color:blue;
  font-weight: bold; 
- margin-bottom: 40px;  
+   
     
 }
 body{
-    margin-left: 20px;
+    width: 80%;
+    height: auto;
     background: rgb(189, 236, 225);
 }
 
@@ -30,19 +34,35 @@ img{
     width: 160px;
     height: 160px;
 }
+.mittentext     {
+    background-color: crimson;
+    width: 80%;
+    margin: 0%;
+    
+}
+/*mittentextens rubrik*/
+.rubrik{
+    
+
+}
 article{
     
+    
     float: left;
-    height: 660px;
+    width: 35%;
+    margin-top: 1%;
+    margin-left: 2%;
+    margin-bottom: 1%;
+    
+    
+    
+    
     
 }
 .article-1{
     
     background: rgb(123, 172, 189);
-    width: 40%;
-    
-    
-    
+    height: 35%
     
     
     
@@ -51,45 +71,63 @@ article{
 
     
     background: rgb(170, 218, 148);
-    width: 40%;
+  
+    
+    
+    
     
     
 }
 header{
     background: lightslategray;
-    width: 20%;
+    padding-bottom:2%;
+    float:right;
+    width: 100%;
+    height: 20%;
     
 }
 aside{
     background: rgb(172, 156, 241);
+    float: right;
+    
+    margin-left: 2%;
+    padding-bottom: 80%; 
+    width: 20%;
+    
     
 }
 /* mina länkar till hemsidorna i header.*/
 .line1,.line2,.line3{
+    margin-right:12% ;
     float: right;
-    width: 80%;
-    font-size: 40px;
-    
+    padding: 3%;
+    ;
+}
+
+nav.nav a{
+    float: left;
 }
 .line1{
     background: mediumorchid;
-    width: 20%;
+    
      
 }
 .line2{
     background: rgb(114, 88, 88);
-     width: auto;
+     
      
 }
 .line3{
     background: olive;
-    width: auto;
+    
     
 
 }
 footer{
     
     background: orangered;
+    margin-bottom: 1%;
+    height: 20%;
     
 }
 
