--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
-   max-width: 1024px; 
-   margin: 0px;
+   
+   
    font-family: sans-serif;
 }
 .clearfix:after{
@@ -9,13 +9,13 @@
     clear: both;
 }
 h1{
-    margin-bottom: 40px;
+    
 }
 h2{
-    margin-bottom: 20px;
+    margin: 0;
 }
 h3{
-    margin-bottom: 15px ;
+    
 }
 
 .P2 {
@@ -25,9 +25,9 @@ h3{
     
 }
 body{
-    width: 80%;
-    height: auto;
-    background: rgb(189, 236, 225);
+    width: 1024px;
+    
+    background-color: rgb(102, 123, 124);
 }
 
 img{
@@ -36,12 +36,20 @@ img{
 }
 .mittentext     {
     background-color: crimson;
-    width: 80%;
-    margin: 0%;
+    
+    width: 72%;
+    margin: 1%;
+    height: auto;
+    float: left;
+    margin-top:2%;
+    border-style: solid;    
     
 }
 /*mittentextens rubrik*/
 .rubrik{
+    width: 20%;
+    margin: 0%;
+    
     
 
 }
@@ -51,28 +59,27 @@ article{
     float: left;
     width: 35%;
     margin-top: 1%;
-    margin-left: 2%;
+    position: relative;
     margin-bottom: 1%;
-    
-    
-    
+    margin :1%;
+    border-style: solid;
+    background-color: rgb(190, 188, 159);
     
     
 }
+/*vänster */
 .article-1{
     
-    background: rgb(123, 172, 189);
-    height: 35%
+    
+    height: 665px;
+    
+    
     
     
     
 }
+/*höger*/
 .article-2{
-
-    
-    background: rgb(170, 218, 148);
-  
-    
     
     
     
@@ -84,45 +91,36 @@ header{
     float:right;
     width: 100%;
     height: 20%;
+    margin: 0;
+    margin-left: 2%;
     
 }
 aside{
-    background: rgb(172, 156, 241);
-    float: right;
-    
-    margin-left: 2%;
-    padding-bottom: 80%; 
+    background: rgb(172, 156, 241); 
     width: 20%;
+    float: right;
+    margin-top: -11%;
+    padding-bottom: 45%;
+    border-style: solid;
+   
+    
+
+
     
     
 }
 /* mina länkar till hemsidorna i header.*/
 .line1,.line2,.line3{
+    text-decoration: none;
     margin-right:12% ;
     float: right;
     padding: 3%;
-    ;
+    background-color: darkgoldenrod;
+    border-style: solid;
 }
 
-nav.nav a{
-    float: left;
-}
-.line1{
-    background: mediumorchid;
-    
-     
-}
-.line2{
-    background: rgb(114, 88, 88);
-     
-     
-}
-.line3{
-    background: olive;
-    
-    
 
-}
+
 footer{
     
     background: orangered;
